<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joao.desafiocotacao.MainActivity">

    <TableLayout
        android:id="@+id/table_buttons"
        android:layout_width="353dp"
        android:layout_height="167dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/top_row"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_dolar"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_red_dark"
                android:text="@string/dolar"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Space
                android:id="@+id/spacer1"
                android:layout_width="75dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_euro"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_green_dark"
                android:text="@string/euro"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold" />

        </TableRow>

        <Space
            android:id="@+id/spacer2"
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TableRow
            android:id="@+id/bottom_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_peso"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/peso_arg"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Space
                android:id="@+id/spacer3"
                android:layout_width="75dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_bitcoin"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/bitcoin"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>


    <RelativeLayout
        android:id="@+id/info_layout"
        android:layout_width="365dp"
        android:layout_height="318dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_buttons">

        <TextView
            android:id="@+id/text_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="30dp"
            android:text="@string/placeholder"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/text_nome"
            android:layout_below="@+id/text_nome"
            android:layout_marginTop="25dp"
            android:text="@string/placeholder"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_data_atualizacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/text_valor"
            android:layout_below="@+id/text_valor"
            android:layout_marginTop="25dp"
            android:text="@string/placeholder"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_fonte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/text_data_atualizacao"
            android:layout_below="@+id/text_data_atualizacao"
            android:layout_marginTop="25dp"
            android:text="@string/placeholder"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
